--- a/04_DOM/1.html
+++ b/04_DOM/1.html
@@ -1,1 +1,52 @@
 <!--//DOM==Document object Model-->
+<!DOCTYPE html> 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>DOM Learning</title>
+    <style>
+        .bg-black{
+            background-color: black;
+            color:#fff;
+        }
+    </style>
+</head>
+<body class="bg-black">
+    <div >
+    <h1 id="title" class="heading">DOM learning on chai aur code</h1>
+    <p>Lorem ipsum dolor sit amet. jhaha</p>
+    </div>
+</body>
+</html>
+
+<!--
+<window->
+    <document->
+        <html>
+            <head>
+                <title>
+                    text node
+
+                </title>
+                <meta>
+                attribute
+
+
+            </head>
+            <body>
+                <div>
+                    div is an attribute
+                    <h1>
+                        attribute, text node
+
+                    </h1>
+                    <p>
+                        text node
+                    </p>
+                </div>
+
+            </body>
+        </html>
+    </document->
+</window->
+-->
